--- a/index.html
+++ b/index.html
@@ -144,11 +144,22 @@
             margin-top: 4px;
             margin-bottom: 4px;
             cursor: pointer;
+            position: relative;
         }
         .media-content img, .media-content video {
             max-width: 100%;
             height: auto;
             display: block;
+        }
+        .media-loading {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: white;
+            background: rgba(0,0,0,0.5);
+            padding: 10px;
+            border-radius: 10px;
         }
         .fullscreen-media {
             position: fixed;
@@ -539,20 +550,6 @@
             color: rgba(255,255,255,0.7);
             min-width: 40px;
         }
-
-        /* Reply Preview for Media */
-        .reply-preview-media {
-            width: 40px;
-            height: 40px;
-            border-radius: 4px;
-            object-fit: cover;
-            margin-right: 8px;
-        }
-        .reply-preview-icon {
-            font-size: 1.2rem;
-            color: var(--accent);
-            margin-right: 8px;
-        }
     </style>
 </head>
 <body>
@@ -754,7 +751,8 @@
                 you: "Ou",
                 "image-message": "Imaj",
                 "voice-message": "Mesaj vwa",
-                "file-message": "Fichye"
+                "file-message": "Fichye",
+                "loading": "Patiyans tanpri..."
             },
             fr: {
                 logo: "D'H7",
@@ -785,7 +783,8 @@
                 you: "Vous",
                 "image-message": "Image",
                 "voice-message": "Message vocal",
-                "file-message": "Fichier"
+                "file-message": "Fichier",
+                "loading": "Patientez s'il vous plaît..."
             },
             en: {
                 logo: "D'H7",
@@ -816,7 +815,8 @@
                 you: "You",
                 "image-message": "Image",
                 "voice-message": "Voice Message",
-                "file-message": "File"
+                "file-message": "File",
+                "loading": "Please wait..."
             },
             es: {
                 logo: "D'H7",
@@ -847,7 +847,8 @@
                 you: "Tú",
                 "image-message": "Imagen",
                 "voice-message": "Mensaje de voz",
-                "file-message": "Archivo"
+                "file-message": "Archivo",
+                "loading": "Por favor espere..."
             }
         };
 
@@ -1409,6 +1410,7 @@
 
             addMessageListeners(div, text);
             container.appendChild(div);
+            attachVoicePlayers(); // Re-attach for new voices
         }
 
         function renderReplyPreview(quoted) {
@@ -1416,11 +1418,11 @@
                 const filename = quoted.split('/').pop();
                 const ext = filename.split('.').pop().toLowerCase();
                 let preview = '';
-                if (['jpeg','jpg','gif','png'].includes(ext)) {
+                if (['jpeg','jpg','gif','png','heic'].includes(ext)) {
                     preview = `<img src="${quoted}" class="reply-preview-media">`;
-                } else if (['mp4','mov','avi','mkv'].includes(ext)) {
+                } else if (['mp4','mov','avi','mkv','hevc'].includes(ext)) {
                     preview = `<video src="${quoted}" class="reply-preview-media" muted></video>`;
-                } else if (['mp3','wav','ogg'].includes(ext)) {
+                } else if (['mp3','wav','ogg','aac','m4a'].includes(ext)) {
                     preview = `<i class="fa-solid fa-microphone reply-preview-icon"></i>`;
                 } else {
                     preview = `<i class="fa-solid fa-file reply-preview-icon"></i>`;
@@ -1538,11 +1540,11 @@
             mediaPreview.innerHTML = '';
             if (quoted.startsWith(UPLOAD_URL)) {
                 const ext = quoted.split('.').pop().toLowerCase();
-                if (['jpeg','jpg','gif','png'].includes(ext)) {
+                if (['jpeg','jpg','gif','png','heic'].includes(ext)) {
                     mediaPreview.innerHTML = `<img src="${quoted}" class="reply-preview-media">`;
-                } else if (['mp4','mov','avi','mkv'].includes(ext)) {
+                } else if (['mp4','mov','avi','mkv','hevc'].includes(ext)) {
                     mediaPreview.innerHTML = `<video src="${quoted}" class="reply-preview-media" muted></video>`;
-                } else if (['mp3','wav','ogg'].includes(ext)) {
+                } else if (['mp3','wav','ogg','aac','m4a'].includes(ext)) {
                     mediaPreview.innerHTML = `<i class="fa-solid fa-microphone reply-preview-icon"></i>`;
                 } else {
                     mediaPreview.innerHTML = `<i class="fa-solid fa-file reply-preview-icon"></i>`;
@@ -1605,11 +1607,11 @@
             if (text.startsWith(UPLOAD_URL)) {
                 const filename = text.split('/').pop();
                 const ext = filename.split('.').pop().toLowerCase();
-                if (['jpeg','jpg','gif','png'].includes(ext)) {
-                    return `<div class="media-content" onclick="openFullscreen('${text}', 'image')"><img src="${text}" loading="lazy" alt="${filename}" /></div><small class="text-gray-400">${filename}</small>`;
-                } else if (['mp4','mov','avi','mkv'].includes(ext)) {
-                    return `<div class="media-content" onclick="openFullscreen('${text}', 'video')"><video src="${text}" playsinline muted preload="metadata" poster="${text}#t=0.1"></video></div><small class="text-gray-400">${filename}</small>`;
-                } else if (['mp3','wav','ogg'].includes(ext)) {
+                if (['jpeg','jpg','gif','png','heic'].includes(ext)) {
+                    return `<div class="media-content" onclick="openFullscreen('${text}', 'image')"><img src="${text}" loading="lazy" alt="${filename}" onerror="this.onerror=null; this.src=''; this.alt='${translations[currentLanguage]["loading"]}';" /><div class="media-loading">${translations[currentLanguage]["loading"]}</div></div><small class="text-gray-400">${filename}</small>`;
+                } else if (['mp4','mov','avi','mkv','hevc'].includes(ext)) {
+                    return `<div class="media-content" onclick="openFullscreen('${text}', 'video')"><video src="${text}" playsinline muted preload="metadata" poster="${text}#t=0.1" onerror="this.onerror=null; this.poster=''; this.alt='${translations[currentLanguage]["loading"]}';"><div class="media-loading">${translations[currentLanguage]["loading"]}</div></video></div><small class="text-gray-400">${filename}</small>`;
+                } else if (['mp3','wav','ogg','aac','m4a'].includes(ext)) {
                     return renderCustomVoicePlayer(text, filename);
                 } else {
                     // Autres fichiers: afficher nom et lien
@@ -1644,7 +1646,8 @@
         }
 
         function attachVoicePlayers() {
-            document.querySelectorAll('.voice-player').forEach(player => {
+            document.querySelectorAll('.voice-player:not(.attached)').forEach(player => {
+                player.classList.add('attached');
                 const audio = new Audio(player.dataset.src);
                 const playPause = player.querySelector('.play-pause');
                 const progressBar = player.querySelector('.progress-bar');
@@ -1911,24 +1914,36 @@
         }
 
         async function uploadFile(file, filename, type) {
-            try {
-                const uniqueName = `${crypto.randomUUID()}_${filename}`;
-                const uploadRes = await fetch(`${UPLOAD_URL}${uniqueName}`, {
-                    method: 'PUT',
-                    headers: {'Content-Type': type},
-                    body: file
-                });
-                if (uploadRes.ok) {
-                    const url = `${UPLOAD_URL}${uniqueName}`;
-                    await postData(url);
-                    syncChatSilently();
-                } else {
-                    alert("Échec de l'upload");
+            let attempts = 0;
+            const maxAttempts = 2;
+            while (attempts < maxAttempts) {
+                try {
+                    const uniqueName = `${crypto.randomUUID()}_${filename}`;
+                    const uploadRes = await fetch(`${UPLOAD_URL}${uniqueName}`, {
+                        method: 'PUT',
+                        headers: {'Content-Type': type},
+                        body: file
+                    });
+                    if (uploadRes.ok) {
+                        const url = `${UPLOAD_URL}${uniqueName}`;
+                        let content = url;
+                        if (replyingTo) {
+                            content = REPLY_START + replyingTo.id + REPLY_END + replyingTo.sender + REPLY_END + replyingTo.quoted + REPLY_END + '\n\n' + url;
+                            replyingTo = null;
+                            cancelReply();
+                        }
+                        await postData(content);
+                        syncChatSilently();
+                        return;
+                    } else {
+                        attempts++;
+                    }
+                } catch(e) {
+                    console.error(e);
+                    attempts++;
                 }
-            } catch(e) {
-                console.error(e);
-                alert("Erreur d'upload");
             }
+            alert("Échec de l'upload après plusieurs tentatives");
         }
 
         // --- SEND API ---
@@ -2105,7 +2120,7 @@
         }
 
         document.addEventListener('gesturestart', function (e) { e.preventDefault(); });
-        document.addEventListener('touchmove', function (e) { if (e.scale !== 1) { e.preventDefault(); } }, { passive: false });
+        document.addEventListener('touchmove', function (e) { if (e.scale !== 1) { e.preventDefault(); } } , { passive: false });
         document.addEventListener('contextmenu', (e) => e.preventDefault());
 
         if ('serviceWorker' in navigator) {
