--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
     </div>
 
     <script>
-        const API = "https://dh7.adamdh7.org";
+        const API = "https://dh7.dhaitiadam.workers.dev";
         const UPLOAD_URL = "https://url.tergenedhaiti.workers.dev/";
         let user = JSON.parse(localStorage.getItem('dh7_session')) || null;
         let activePeer = null;
