--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
 
     <script>
         const API = "https://dh7.adamdh7.org";
-        const UPLOAD_URL = "https://url.tergenedhaiti.workers.dev/";
+        const UPLOAD_URL = "https://uploads.adamdh7.org";
         const PUBLIC_URL = "https://pub-f5ae73a6ce0f4d0ba225458c1a10d89c.r2.dev/";
         let user = JSON.parse(localStorage.getItem('dh7_session')) || null;
         let activePeer = null;
