--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
     <script>
         const API = "https://dh7.adamdh7.org";
         const UPLOAD_URL = "https://uploads.adamdh7.org";
-        const PUBLIC_URL = "https://";
+        const PUBLIC_URL = "https://uploads.adamdh7.org/";
         let user = JSON.parse(localStorage.getItem('dh7_session')) || null;
         let activePeer = null;
         let chatInterval = null;
