--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
     </div>
 
     <script>
-        const API = "https://dh7.adamdh7.org";
+        const API = "https://server.adamdh7.org";
         const UPLOAD_URL = "https://uploads.adamdh7.org/";
         const PUBLIC_URL = "https://uploads.adamdh7.org/";
         let user = JSON.parse(localStorage.getItem('dh7_session')) || null;
